app/assets/stylesheets/app.css
/*
 * COLORS
*/
:root {
  --header-blue: #4183c4;
  --accent-blue: #4183c4;
  --border-gray: rgb(230, 236, 240);;
  --button-gray: rgb(249, 249, 249);
  --highlight-gray: rgb(241, 241, 241);
  --icon-gray: rgb(211,211,211);
  --activity-orange: orange;
  --activity-green: limegreen;
  --activity-gray: #bbbbbb;
}

/*
 * LAYOUT
*/

/* CONTAINERS */
html, body { height: 100%; margin: 0; }
@media screen and (max-width: 340px) { html { font-size: 14px; } }
@media screen and (max-width: 390px) { html { font-size: 15px; } }
.container-x { max-width: 1000px; min-width: 320px; margin-left: auto; margin-right: auto;}
.container-y {  min-height: 450px; height: 100%; overflow: hidden; }
.navbar { border-bottom: 1px solid var(--border-gray) }

@keyframes slidein-left { from { transform: translate(-100%); } to { transform: translate(0%); } }
@keyframes slidein-right { from { transform: translate(100%); } to { transform: translate(0%); opacity: 1; } }

/* FLEXBOX PARENTS */
.row { display: flex; flex-direction: row; }
.column { display: flex; flex-direction: column; }
.center { justify-content: center; }

/* FLEXBOX CHILDREN */
.compact { flex-grow: 0; flex-shrink: 0; flex-basis: auto; }
.expand { flex-grow: 1; flex-shrink: 1; flex-basis: 0; }


/*
 * STYLING
*/
body { font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif; }
a { text-decoration: none; color: var(--accent-blue); }
input { border: 1px solid var(--highlight-gray); border-radius: 0.25rem; padding: 0.45rem; font-size: 1rem; }
.input.small { padding: 0.4rem; font-size: 0.8rem; }
input:focus { border-color: var(--accent-blue); outline: 0; }
.input.icon { border-top-left-radius: 0; border-bottom-left-radius: 0; }
.input.icon:focus { border-top-left-radius: 0; border-bottom-left-radius: 0; border-left-color: var(--accent-blue); }

select { border: 1px solid var(--highlight-gray); border-radius: 0.25rem; padding: 0.5rem; font-size: 1rem; }
select.input-small { padding: 0.3rem; }
select:focus { border-color: var(--accent-blue); }
button, .button {
  height: min-content;
  background-color: var(--button-gray);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  font-size: 1rem;
  text-decoration: none;
  color: black;
}
.button.small { padding: 0rem 0.6rem; }
.button.medium { padding: 0.45rem 1rem; }
button:hover, .button:hover { background-color: var(--highlight-gray); }
.primary { background-color: #2185d0; color: #fff; }
.primary:hover { background-color: #1678c2; }

.radio-buttons > button { border-radius: 0; }
.radio-buttons > button:first-child { border-radius: 0.25rem 0 0 0.25rem }
.radio-buttons > button:last-child { border-radius: 0 0.25rem 0.25rem 0 }
.radio-buttons > button.selected { background-color: var(--highlight-gray); }

.no-select { user-select: none; -webkit-user-select: none; }
.dynamic-shape > .block { transition: height 0.5s, width 0.5s; }
.selected-shape > div { box-shadow: 0 0 0 1px #ffffff, 0 0 0 3px var(--accent-blue); }

/*
 * DROPDOWN
*/

.dropdown { position: relative; display: inline-block; }

.dropdown-content {
  display: none;
  position: absolute;
  background-color: var(--button-gray);
  z-index: 5;
  border-radius: 0 0 0.25rem 0.25rem;
}

.dropdown-content a {
  padding: 0.5rem 1rem;
  text-decoration: none;
  display: block;
  cursor: pointer;
  border-radius: 0.25rem;
  text-align: center;
  color: black;
}

.dropdown-content a:hover { background-color: var(--highlight-gray) }

.dropdown:hover .dropdown-content { display: block; }


/*
 * LOADING SPINNER
*/

.spinner:after {
  content: " ";
  display: block;
  width: 80%;
  height: 80%;
  border-radius: 50%;
  border: 2px solid var(--icon-gray);
  border-right-color: transparent;
  animation: rotation 1.2s linear infinite;
}

@keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }

